refactor(i18n): i18n refactor cleanup